--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -174,6 +174,8 @@
 
 .greedy-nav {
   position: relative;
+  display: flex;
+  align-items: center;
   min-width: 250px;
   background: transparent;
 
@@ -203,11 +205,11 @@
   }
 
   .visible-links {
-    display: table;
+    display: flex;
+    align-items: center;
 
     li {
-      display: table-cell;
-      vertical-align: middle;
+      white-space: nowrap;
 
       &:first-child {
         font-weight: bold;
